--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <div id="rez1"></div>
+    <div id="rez2"></div>
+
     <script src="./js/main.js" type="module"></script>
 </body>
 
